Markdown edits requested by Marcomms

--- a/blog/Sub0-Online-take-the-stage/index.mdx
+++ b/blog/Sub0-Online-take-the-stage/index.mdx
@@ -46,15 +46,15 @@ The conference will have a wide range of audience members, from those interested
 
 In addition to talks aimed at all knowledge levels (required for Use Case and an option for Custom Format), we’ve outlined the following three categories:
 
-### Beginner:
+## Beginner:
 
 Has started with the basics and is now eager to learn more. Remember what it was like when you were starting out? Pitch your presentation to help this audience develop the skills they need to work with Substrate.
 
-### Intermediate:
+## Intermediate:
 
 Knows the devhub pretty well, is familiar with the whole Substrate scene, and now has an appetite for more. What tips and skills would you have loved to have when you started building your project with Substrate? Share your insights to help them get to the next level.
 
-### Advanced:
+## Advanced:
 
 Eats, breathes, and dreams Substrate. Spends most of their time in the source code of Substrate’s Rust docs and wants to learn how to extend its capabilities. This crowd is looking for a challenge and technical excellence to enhance their experience. Dive deep!
 
@@ -62,21 +62,14 @@ Eats, breathes, and dreams Substrate. Spends most of their time in the source co
 
 ## Submission criteria
 
-● All submissions must be made in English, and speakers should be prepared to present in English at the conference
-
-● Proposals must be submitted no later than August 8th, 2021 at 10pm CEST
-
-● All submissions must be related to Substrate
-
-● Projects presented must be in active development or be a live product/service built with Substrate
-
-● No marketing or sales pitches, please!
-
-● Be prepared to speak live; if the topic requires it, you are welcome to enrich your presentation/workshop with a pre-recorded demo or a coding walkthrough
-
-● Projects presented must not be under negative legal, regulatory, and/or community scrutiny
-
-● More than one proposal is welcome, but please complete a separate form for each
+* All submissions must be made in English, and speakers should be prepared to present in English at the conference
+* Proposals must be submitted no later than August 8th, 2021 at 10pm CEST
+* All submissions must be related to Substrate
+* Projects presented must be in active development or be a live product/service built with Substrate
+* No marketing or sales pitches, please!
+* Be prepared to speak live; if the topic requires it, you are welcome to enrich your presentation/workshop with a pre-recorded demo or a coding walkthrough
+* Projects presented must not be under negative legal, regulatory, and/or community scrutiny
+* More than one proposal is welcome, but please complete a separate form for each
 
 ## Selection process
 
@@ -86,7 +79,7 @@ The final agenda will be published by the end of August on the Sub0 website. Due
 
 ## Submit your proposal
 
-Submit your proposal(s) now using this [link](https://forms.gle/SsvMncsnpYMWvWdA9)**.**
+**Submit your proposal(s) now using this [link](https://forms.gle/SsvMncsnpYMWvWdA9).**
 
 **Don’t forget the deadline of August 8th at 10pm CEST – submissions received after this date cannot be considered for the final agenda.**
 
